# percolator-perp-liquidity

./: .gitignore  DESIGN-DIRECTION.md  LICENSE  README.md  SAFETY.md
amm/: EdgeMax_CumVar.rs  README.md  eval.sh
docs/: build_feedback_pdf.py  build_tech_pdf.py
graphs/: gen.py
model/src/: design_a.rs  lib.rs
parimutuel/: Cargo.toml  MATCHER-CHANGES.md  README.md
parimutuel/src/: lib.rs
proofs/: Cargo.toml  README.md
proofs/src/: lib.rs
