[package]
name = "csvfl-model"
version = "0.1.0"
edition = "2021"
description = "Reference model + Kani formal proofs for the permissionless-perp safety invariants"
license = "Apache-2.0"

[lib]
name = "csvfl_model"
path = "src/lib.rs"

# cfg(kani) is set by `cargo kani`; register it so normal builds don't warn.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

# No runtime deps. Kani is invoked via `cargo kani`; all proof code is gated behind cfg(kani).
[dependencies]

[dev-dependencies]
